--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -79,6 +79,7 @@ layers:
                 draw:
                     lines:
                         style: lines-traffic-animation
+                        order: global.order
                         color: [0.086,0.135,0.260]
                         width: [[8,0px],[9,0.25px],[10,1px],[12,1px],[13,2px],[14,3px],[15,5px],[16,5px],[17,9px],[18,16px],[19,12px]]
                         outline:
@@ -96,6 +97,8 @@ layers:
                         # color: [0.800,1.000,0.987]
                         color: [0.000,0.535,0.630]
                         width: [[11,8px],[13,12px],[16,30px],[17,40px],[18,50px],[19,80px]]
+                    highway-casing:
+                        order: global.order
 
                 highway-link:
                     filter: { is_link: true } # on- and off-ramps, etc
@@ -112,7 +115,6 @@ layers:
                             visible: false
                         highway-glow:
                             visible: false
-
 
                     highway-link-early:
                         filter: { $zoom: { min: 13, max: 15 } }
