fix bus_stop display

--- a/layers/pois.yaml
+++ b/layers/pois.yaml
@@ -573,17 +573,18 @@ layers:
                 icons:
                     size: 0px
 
-        # TODO: this isn't working, should see small icons near the transbay terminal in SF
         bus_stop:
             filter:
                 kind: [bus_stop]
             draw:
                 icons:
-                    size: 14px
+                    size: [[18,12px],[20,18px]]
                     text:
+                        optional: true
                         font:
                             size: 11px
-            later:
+                            weight: normal
+            early:
                 filter: { $zoom: { max: 19 } }
                 draw:
                     icons:
