add footway as pedestrian landuse style, see https://github.com/tilezen/vector-datasource/issues/1312

--- a/layers/landuse.yaml
+++ b/layers/landuse.yaml
@@ -170,7 +170,7 @@ layers:
                         visible: true
             pedestrian:
                 filter:
-                    kind: [pedestrian,common]
+                    kind: [pedestrian,common,footway]
                 draw:
                     polygons:
                         style: landuse-tier6-pedestrian
